tests/NormalTests/paczka1/fuzzy1/23060128.err
Error in line 8: Umg A[23 [3,3
Error in line 16: A966 A290 88,2
Error in line 29: mMmFRNRGtH A763 81,8
Error in line 26: A966 A763 16,7
